--- a/预防医学II/笔记/10 烟草的控制.md
+++ b/预防医学II/笔记/10 烟草的控制.md
@@ -395,6 +395,7 @@ D22A --> D2B
 一般而言，戒烟后平均体重增加约 4.5 斤。
 
 **对策**
+
 - 首先是避免进食高热量饮食
 - 建议戒烟者加强锻炼
 
@@ -411,3 +412,139 @@ D22A --> D2B
 鼓励所有的患者将自己的戒烟决定告诉家人、朋友及同事，以寻求他们的支持和鼓励。没有戒烟社会支持的患者，如果他们愿意的话，可以动员他们集体参加戒烟小组，以求助于咨询人员或其他卫生保健人员。
 
 对于这些造成心理紧张的情况要预先制订有一个具体的计划。
+
+## 第五节 人群的控烟策略
+
+### 一、《烟草控制框架公约》及 MPOWER 战略
+
+- 吸烟行为的出现植根于特定的文化、习俗和社会环境中。
+- 提倡以社区、学校、工厂为载体
+- 以全人群为干预对象
+- 以改变政策、环境为主的综合策略开展控烟
+
+> **吸烟人群的基本干预策略**
+>
+> ```mermaid
+> graph LR
+> subgraph 社区支持性环境
+> A[青少年] -->|消除吸烟动因| B[开始吸烟]
+> B --> C[烟草依赖]
+> C -->|督促病帮助戒烟| 发病及死亡
+> A -->|减少被动吸烟机会| D[被动吸烟]
+> id1(学校控烟干预) -.-> A
+> id2(吸烟者干预) -.-> C
+> end
+> ```
+
+> **烟草控制框架公约**
+>
+> 《烟草控制框架公约》（Framework Convention on Tobacco Control，FCTC）是 WHO 首次制定的一份具国际法约束力的全球性公约，是针对烟草的第一个世界范围的多边协议。其宗旨是遏制烟草在全世界的蔓延，尤其是在发展中国家的蔓延。
+
+> ![吴仪副总理兼卫生部部长率中国代表团出席第五十六届卫生大会合影留念](assets/markdown-img-paste-20210307211549625.png)
+> 5 月 21 日，WHO《烟草控制框架公约》 在第 56 届世界卫生大会上正式通过。我国于 2003 年 11 月 10 日在纽约签署公约，为第 77 个签约国。
+
+烟草控制的主要措施
+
+减少烟草供应 | 降低烟草需求
+--- | ---
+作物替代和多种经营；<br/>减少对烟草生产的价格支持和补贴；<br/>对国际贸易的限制；<br/>限制年轻人接触烟草； | 提高烟草税；<br/>健康教育：向公众发布烟草危害信息；健康警语；青少年控烟<br/>禁止制烟草广告和促销；<br/>公共场所禁烟；<br/>戒烟干预措施，等。
+
+> **17条关键的控烟措施**
+>
+> 1. 减少烟草需求的价格和税收措施（第6条）
+> 2. 减少烟草需求的非价格措施（第7条）
+> 3. 防止接触烟草烟雾（第8条）
+> 4. 烟草制品成分管制（第9条）
+> 5. 烟草制品披露的规定（第10条）
+> 6. *烟草制品的包装和标签（第11条）
+> 7. 教育、交流、培训和公众意识（第12条）
+> 8. *烟草广告、促销和赞助（第13条）
+> 9. 与烟草依赖和戒烟有关的降低烟草需求的措施（第14条）
+> 10. *烟草制品非法贸易（第15条）
+> 11. 向未成年人销售和由未成年人销售（第16条）
+> 12. 对经济上切实可行的替代活动提供支持（第17条）
+> 13. 保护环境和人员健康（第18条）
+> 14. 责任（第19条）
+> 15. 研究、监测和信息交换（第20条）
+> 16. 报告和信息交换（第21条）
+> 17. 科学、技术和法律方面的合作及有关专业技术的提供（第22条）
+
+> **世界卫生组织MPOWER系列政策**
+>
+> 控烟措施：限制烟草广告
+> - 广告和促销影响着人们对烟草的需求，并且吸引更多的人开始吸烟。
+> - 禁止广告和促销是有效的，但前提是禁止活动要广泛开展，覆盖所有的媒体和和所有在用的烟草名称和标记。
+> - 世界卫生组织和世界银行都建议各国或地区禁止所有形式的烟草广告和促销。据估计，如果全球一致采取这项措施，全世界烟草制品的需求将减少约 7%。
+
+#### （一）M：监测烟草使用
+
+监测数据是MPOWER系列策略中各项干预措施取得成功的保证。
+
+一个完整烟草监测系统需要包括：
+
+- 烟草使用的流行率；
+- 控烟政策干预的影响；
+- 烟草业的营销、促销策略等。
+
+#### （二）P：保护人们免遭烟草烟雾危害
+
+由于二手烟的暴露没有安全水平，无论是吸烟室、吸烟区都无法完全阻止环境烟雾的扩散。完全禁止在公共场所、工作场所、交通工具内吸烟是保护不吸烟者免受环境烟雾暴露的重要措施。
+
+无烟环境不会对于经济造成负面影响。
+
+#### （三）O：提供戒烟帮助
+
+医疗卫生系统在治疗烟草依赖问题上肩负着主要责任。
+
+戒烟干预包括三大类：
+
+- 融入初级卫生保健服务的戒烟咨询；
+- 便捷且免费的戒烟热线；
+- 提供低廉的药物治疗。
+
+#### （四）W：警示烟草危害
+
+烟草包装警语可以降低烟草业市场营销的效果，向吸烟者揭示烟草使用的风险和后果，有效说服吸烟者戒烟。为了达到效果，警示信息必须占据足够大的面积，且清晰易懂，既要包括图片也要包括文字。警示信息至少应占烟草包装主要展示区域面积的一半以上，包含有吸烟导致危害和具体疾病的描述内容。
+
+> **澳大利亚统一平装烟包**
+>
+> ![澳大利亚统一平装烟包](assets/markdown-img-paste-2021030721385675.png)
+
+#### （五）E：执行烟草广告、促销和赞助禁令
+
+全面禁止所有烟草广告、促销和赞助，可以保护人们免受烟草企业营销手段的误导。
+
+禁令要产生效果，就必须全面执行，同时要针对所有类型营销和促销活动。全面禁止包括禁止互联网和广告牌在内的所有渠道。
+
+#### （六）R：提高烟税
+
+价格和税收手段在世界各国的控烟政策中，已经被公认为最有效的单项控烟政策需求措施，尤其是针对青少年和低收入人群。经验数据表明，烟草价格每提升 10%，发达国家的烟草消费会下降 4%，在发展中国家，则会下降 8%。
+
+## 第六节 医生在控烟中的职责
+
+医生在烟草控制领域担负着重要使命。
+
+- 首先，作为医务工作者，理应成为不吸烟的行为模范。
+- 其次，医生要成为戒烟的引导者。
+- 在社区和社会层面，医生应该成为无烟的倡导者和支持者。
+
+---
+
+> **小结**
+>
+> - 行为咨询方法
+> - 临床场所的戒烟咨询
+> - 戒烟药物
+> - 人群的控烟策略（FCTC）
+> - 体力活动与静坐生活方式
+> - 体力活动促进策略
+
+> **复习思考题**
+>
+> 结合健康生态学模型，考虑如何从不同层次实施控烟？
+
+> **推荐网站**
+>
+> 1. 中国控烟协会：http://www.catcprc.org.cn
+> 2. 控烟之声：http://www.tcalliance.org.cn/home/index.php
+> 3. 新领导俱乐部、医生和卫生保健工作者的控烟联盟：http://www.leadershipclub.cn/index.php?lang=cn
