--- a/法医学/2 死亡.md
+++ b/法医学/2 死亡.md
@@ -72,3 +72,9 @@
 3.
 四、判定时间
 临床判定和确认实验结果均符合脑死亡判定标准者可首次判定为脑死亡。首次判定 12 h（**24 h**）后再次复查，结果仍符合脑死亡判定标准者，方可最终确认为脑死亡。
+
+持续性植物状态（植物人）
+由于神经中枢的高级部位（大脑皮质）功能丧失，病人成意识障碍或昏迷状态；皮质下中枢部位（皮质下核、脑干）功能仍然存在。
+表现为呼吸、循环、体温调节、消化吸收、分泌排泄、新陈代谢等仍存在或部分存在。
+对于植物人放弃治疗、抢救为非法。（安乐死？）
+不同于脑死亡
