--- a/法医学/笔记/2 死亡.md
+++ b/法医学/笔记/2 死亡.md
@@ -1,25 +1,21 @@
 # 第二章 死亡
 
-哲学中的死亡
-死亡哲学是哲学的一个分支学科
-世界上所有的宗教都是利用人们对死亡的恐惧心理而得到广泛传播的。三大宗教基督教、佛教、伊斯兰教，有地狱、炼狱、因果报应等说法，这是典型的通过「死」来控制「生」，无论信教与否，人们多多少少都受此限制。
-但希腊哲学家伊壁鸠鲁则根本不承认死亡，他说：「最可怕的恶是死，但死却与我们毫无关系，因为我们活着的时候，死亡还不存在；当死亡来到的时候，我们又已经不存在了。」
-
+> **哲学中的死亡**
+>
+> 死亡哲学是哲学的一个分支学科。
+> 世界上所有的宗教都是利用人们对死亡的恐惧心理而得到广泛传播的。三大宗教基督教、佛教、伊斯兰教，有地狱、炼狱、因果报应等说法，这是典型的通过「死」来控制「生」，无论信教与否，人们多多少少都受此限制。
+> 但希腊哲学家伊壁鸠鲁则根本不承认死亡，他说：「最可怕的恶是死，但死却与我们毫无关系，因为我们活着的时候，死亡还不存在；当死亡来到的时候，我们又已经不存在了。」
 
 ## 第一节 概述
 
-定义
+**定义**：「死亡」是指 **生命** 消失；即个体生命功能的永久丧失。
 
-「死亡」是指 **生命** 消失；即个体生命功能的永久丧失
-生命的本质是机体内 **同化、异化** 过程这一对矛盾的不断运动；而死亡则是这一对矛盾的终止。
+> 生命的本质是机体内 **同化、异化** 过程这一对矛盾的不断运动；而死亡则是这一对矛盾的终止。
 
-死亡在医学领域的意义
+**死亡在医学领域的意义**
 
-临床医学：判定死亡后才可放弃抢救、治疗。
-
-法医学：涉及民事、刑事等诸多法律问题。死亡诊断或死亡证明必须得到法律的认可；确定死亡原因、性质、方式以及死亡事件推断等。
-
-医学分类（按照功能停止先后顺序）
+- **临床医学**：判定死亡后才可放弃抢救、治疗。
+- **法医学**：涉及民事、刑事等诸多法律问题。死亡诊断或死亡证明必须得到法律的认可；确定死亡原因、性质、方式以及死亡事件推断等。
 
 ### （一）心脏性死亡（cardiac death）
 
@@ -181,9 +177,9 @@
 
 ##### 1. 安乐死
 
-- 无痛苦致死术
-- 尊重生命权利
-- 有尊严的死亡
+- 无痛苦致死术；
+- 尊重生命权利；
+- 有尊严的死亡。
 
 **发展过程**
 
