--- a/法医学/笔记/2 死亡与死后变化.md
+++ b/法医学/笔记/2 死亡与死后变化.md
@@ -622,7 +622,231 @@ $$
 
 个体死亡 24 小时后在尸体上表现出的死后变化（late postmortem phenomenon) 。
 
-包括两类：毁坏型死后变化；
-                   保存型死后变化。
+包括两类：
 
-基本上在死后第一昼夜末或 2～3 昼夜表现出来，但充分达到白骨化则需要更长的时间
+- 毁坏型死后变化；
+- 保存型死后变化。
+
+基本上在死后第一昼夜末或 2～3 昼夜表现出来，但充分达到白骨化则需要更长的时间。
+
+$$
+晚期死后变化\begin{cases}毁坏型晚期死后变化\begin{cases}尸体腐败\\霉尸\\白骨化\end{cases}\\保存型晚期死后变化\begin{cases}尸蜡\\木乃伊\\泥炭鞣尸\end{cases}\end{cases}
+$$
+
+**一般过程**：环境温度为常温
+
+$$
+死亡\xrightarrow{3～6 h}尸臭\xrightarrow{24～48 h}\begin{cases}尸绿\\腐败静脉网\\腐败水气泡\end{cases}\xrightarrow{5～7 d}腐败巨人观
+$$
+
+**腐败发展概图**
+
+$$
+腐败细菌大量繁殖\xrightarrow{分解蛋白质、脂肪和碳水化合物}腐败气体\to\begin{cases}尸臭\\尸绿\\腐败水气泡\\腐败静脉网\\泡沫器官\\腐败巨人观\end{cases}
+$$
+
+#### （一）毁坏型晚期死后变化
+
+##### 1. 尸体腐败（putrefaction）
+
+人死后腐败细菌在尸体内大量生长繁殖，使蛋白质、脂肪和糖类分解为简单的有机物、无机物和腐败气体，使尸体软组织逐渐分解和消失的过程。
+
+###### （1）腐败的发展和形态变化
+
+**尸臭（odor of putrefaction）**：个体死亡后 3～6 小时，肠道内的腐败菌繁殖生长，产生并释放出腐败气体，发出腐败臭味，称为尸臭。
+
+- **腐败气体的成分**：含氧氮氢的小分子气体，二氧化碳，还有含氨、硫化氢、甲烷等具有强烈臭味的成分。
+
+**尸绿（greenish discoloration on cadaver）**：腐败气体中的硫化氢与血红蛋白生成硫化血红蛋白，透过皮肤呈绿色，称为尸绿。尸绿通常在死后 24 小时开始出现，最初多见于右下腹部，经 3～5 日，尸绿可以遍布全腹及更广泛的部位。
+
+- **形成机制**：腐败气体的硫化氢与溶血产物血红蛋白及其衍生物结合生成硫化血红蛋白或硫化变性血红蛋白，或与血液中的游离铁结合成为硫化铁，使皮肤呈污绿色。
+
+
+![尸绿](assets/markdown-img-paste-20210309143138386.png)
+
+![尸绿](assets/markdown-img-paste-20210309143338578.png)
+
+**死后循环（cadaveric circulation）**：尸体血管内产生的腐败气体，压迫血液使之流动，称为死后循环。
+
+**腐败静脉网（putrefactive networks）**：尸体内部器官及血管中的血液受腐败气体的压迫，流向体表，使皮下静脉扩张，充满腐败血液，在体表呈现暗红色或污绿色树枝状血管网，称为腐败静脉网。
+
+![腐败静脉网](assets/markdown-img-paste-20210309143447586.png)
+
+![腐败静脉网](assets/markdown-img-paste-20210309143502682.png)
+
+**腐败巨人观（bloated cadaver）**：尸体腐败扩展到全身时，尸体软组织内充满腐败气体使整个尸体膨胀，体积变大，面目全非，称为巨人观。表现为颜面膨大，眼球突出，口唇外翻，舌尖突出于口外，颈部变粗，胸、腹部显著膨胀隆起，阴茎、阴囊高度肿胀，皮肤呈污绿色、腐败静脉网多见，皮下组织和肌肉呈气肿状，四肢增粗，有的手和足的皮肤可呈手套和袜状脱落，容貌难以辨认。
+
+![腐败尸体巨人观](assets/markdown-img-paste-20210309123659129.png)
+
+**泡沫脏器（foaming organ）**：因腐败气体使尸体器官形成大小不等的海绵样空泡，称为泡沫器官。
+
+![泡沫肝脏](assets/markdown-img-paste-20210309143649410.png)
+
+**死后呕吐（postmortem vomiting）**：死后胃内容物因受腐败气体的压迫，从食管经口鼻腔排出，称死后呕吐。同样，也可压迫积聚在气管和支气管中的腐败血性液体自口鼻腔排出。
+
+![死后呕吐](assets/markdown-img-paste-20210309143909403.png)
+
+**死后分娩（postmortem delivery）**：高度腐败的尸体，腐败气体可以将子宫内的胎儿挤出子宫，称为死后分娩，或棺内分娩。
+
+###### （2）影响腐败的因素
+
+- 温度
+- 湿度
+- 空气流通
+- 尸体本身因素：个体差异、死亡原因
+
+###### （3）法医学意义
+
+- 推断死亡时间；
+- 区别腐败征象与生前的疾病和损伤；
+- 争取及早进行尸解，采取措施防止腐败；
+- 注意有意义的证据的提取
+  - 如：骨折的保存，骨髓的硅藻检验，颈动脉的内膜裂伤，动脉粥样硬化，器官组织的异物存留及某些毒物中毒等。
+
+![](assets/markdown-img-paste-20210309144144243.png)
+
+##### 2. 霉尸（molded cadaver）
+
+尸体处于适宜真菌生长的环境条件下，在裸露的局部或全身表面出现一层白色或灰绿霉斑，称为霉尸。
+
+###### （1）形态表现
+
+霉斑开始多见于颜面部的眼、鼻、口唇及周围，颈部和腹股沟等处。
+
+###### （2）法医学意义  
+- 推测尸体所处的环境条件，有利于分析案情。
+- 注意与某些损伤和疾病相鉴别。
+
+![霉尸](assets/markdown-img-paste-20210309144341523.png)
+
+![霉尸](assets/markdown-img-paste-20210309144349752.png)
+
+##### 3. 白骨化（skeletonized remains）
+
+尸体的软组织经腐败逐渐软化、液化，直至完全溶解消失，指甲毛发脱落，仅残余骨骼，称为白骨化。
+
+###### （1）法医学意义
+- 尸骨可以长久保存损伤痕迹；
+- 重金属毒物可以在骨质中进行检测；
+- 骨髓可用于硅藻检查；
+- 个人识别（法医人类学）。
+
+#### （二）保存型尸体变化
+
+尸体受某些内外因素的影响，使腐败过程中断，软组织免于崩解液化，并将尸体全部或部分保存下来，称为保存型尸体。
+
+##### 1. 干尸
+
+尸体处在干热或通风条件良好的环境中，因水分迅速蒸发而不发生腐败，以干枯状态保存下来，称为木乃伊（mummy），或称为干尸。
+
+###### （1）形成的条件：
+
+- **外因**：干燥、通风、较高的环境温度或周围有强吸水的物质（大量木炭、灯芯、多层棉质吸水的衣物、香灰等）；
+- **内因**：尸体条件（死前有严重脱水的死因－砷中毒致腹泻；死前体质消瘦或脱水）
+
+###### （2）法医学意义：
+
+- 可保留生前某些损伤形态；
+- 可保留某些个人特征
+- 可保留生前某些病变
+
+##### 2. 尸蜡（adipocere）
+
+埋于湿土或浸于水中的尸体，皮下脂肪组织因皂化或氢化作用，形成灰白色或黄白色蜡样物质而被保存，称为尸蜡。多为局部性，罕见全身性尸蜡。
+
+###### （1）尸蜡征象
+
+一般呈白色、灰白色、黄色坚实的蜡样物，有油腻感，可以压陷，但脆而易碎。
+
+###### （2）法医学意义
+
+可以保存生前的伤痕，如颈部的索沟、扼痕等；个人识别。
+
+![尸蜡](assets/markdown-img-paste-20210309145357333.png)
+
+##### 3. 泥炭鞣尸（cadaver tanned in peat bog）
+
+处于酸性土壤或泥炭沼泽中的尸体，因鞣酸和多种腐植酸等酸性物质的作用，腐败停止发展，皮肤鞣化，骨骼脱钙，变成体积小、重量轻、易弯曲的软尸，称为泥炭鞣尸。又称「软尸」。
+
+###### （1）法医学意义
+
+可以保留某些生前的损伤痕迹。
+
+![泥炭鞣尸](assets/markdown-img-paste-20210309145614470.png)
+
+![江陵古尸](assets/markdown-img-paste-20210309145624969.png)
+
+##### 4. 浸软（maceration）
+
+妊娠 8 周以上的死胎，滞留于宫内不能完全被溶解吸收，而浸泡于无菌的羊水中，发生死后改变，称为浸软，或称浸软儿。
+
+###### （1）浸软程度
+
+根据浸软的部位和范围分为三度。
+
+- **一度浸软**：表皮层内；
+- **二度浸软**：真皮层；
+- **三度浸软**：深部组织及内部器官。
+
+###### （2）法医学意义
+
+- 浸软胎儿是死胎，死后已在宫内一段时间，在此期间母体受伤不是引起胎儿死亡的原因。
+- 浸软胎儿一旦暴露于空气中极易发生腐败，故应尽早进行法医学检验。
+
+### 三、其他死后变化
+
+#### （一）死后化学变化（postmortem chemical changes）
+
+人死后，尸体各种组织、细胞和体液因持续分解而发生的一些化学和生物化学变化，称为死后化学变化。
+
+**研究对象**：血液、脑脊液、玻璃体液
+
+##### 1. 影响因素
+
+- 死亡时间
+- 取材部位和方法
+- 检测技术和方法
+
+##### 2. 法医学意义
+
+- 有助于推测死后经过时间。
+- 有助于分析死亡原因。如血糖、IgE；
+- 有助于判断生前所患疾病或损伤。
+
+#### （二）昆虫、动物对尸体的毁坏
+
+动物对尸体的毁坏与死后变化无内在联系，但是可以造成典型的损坏表现，需与生前损伤加以区分。
+
+##### 1. 昆虫
+
+法庭昆虫学（forensic entomology）
+
+- 蝇（fly）、蛆
+- 蚂蚁（ant）
+- 甲虫（beetles）
+
+##### 2. 动物
+
+- 鼠类
+- 狼、犬类
+- 鸟类
+- 水族动物
+
+![](assets/markdown-img-paste-20210309150245880.png)
+
+![](assets/markdown-img-paste-20210309150255728.png)
+
+#### （三）其它自然环境因素对尸体的毁坏
+
+- 江河湖泊水中尸体
+- 铁路、公路道上的尸体  
+- 建筑物、厂房等处的尸体  
+- 山坡上的尸体  
+- 雷雨天的尸体
+- 火灾中的尸体
+
+### 四、死后人为现象
+
+- 抢救时胸外按摩导致肋骨、胸骨骨折；
+- 搬运尸体过程中造成的损伤；胃内容物的返流；
+- 尸体解剖操作不当导致的骨折等现象；
