--- a/法医学/笔记/2 死亡与死后变化.md
+++ b/法医学/笔记/2 死亡与死后变化.md
@@ -850,3 +850,17 @@ $$
 - 抢救时胸外按摩导致肋骨、胸骨骨折；
 - 搬运尸体过程中造成的损伤；胃内容物的返流；
 - 尸体解剖操作不当导致的骨折等现象；
+
+## 第三节 死亡时间推断
+
+### 一、死亡时间的概念
+
+死亡时间（time of death）在法医学上实际是指死后经历时间（the time since death, TSD）, 或称死后间隔时间（postmortem interval，PMI），即从发现、检查尸体时到死亡发生时的时间间隔。
+
+### 二、推断死亡时间的法医学意义
+
+死亡时间推断在许多案例是法医需要解决的首要问题。死亡时间在多数情况下标志着案件发生的时间，并与有关的人和事密切相关，推断死亡时间对确定作案时间，认定和排除嫌疑人有无作案时间，划定侦查范围乃至案件的最终侦破均具有重要作用。
+
+- 死后早期死亡时间推断
+- 晚期（腐败）尸体死亡时间推断
+- 白骨化尸体死亡时间推断 
