--- a/法医学/笔记/2 死亡与死后变化.md
+++ b/法医学/笔记/2 死亡与死后变化.md
@@ -863,4 +863,71 @@ $$
 
 - 死后早期死亡时间推断
 - 晚期（腐败）尸体死亡时间推断
-- 白骨化尸体死亡时间推断 
+- 白骨化尸体死亡时间推断
+
+### 三、推断死亡时间的办法
+
+#### （一）根据早期尸体变化推断死亡时间
+
+![根据尸体现象推断死亡时间](assets/markdown-img-paste-20210309152259829.png)
+
+##### 1. 根据尸温推断死亡时间
+
+###### （1）尸体温度的测量
+
+检测脑室、肝及直肠温度。
+
+**直肠温度测量方法**：将温度计插入尸体肛门 15 cm，插入时温度计应尽量远离骨盆后壁，以避免骨盆壁温度较低而造成误差。
+
+**肝脏温度的测量方法**：从尸体右肋下缘切一小口，插入温度计达肝表面。现多采用电子测温仪。
+
+###### （2）死亡时的尸体温度
+
+直肠温度可波动在 34.2～37.6 ℃之间，平均 36.9 ℃。
+
+$$
+T_b = 0.67 T_r + 0.33 T_s
+$$
+
+###### （3）尸体冷却规律
+
+尸体散热过程整个过程呈反「S」形曲线。
+
+![直肠尸冷曲线](assets/markdown-img-paste-20210309155745835.png)
+
+可用二次幂 S 形曲线公式表示。
+
+$$
+Q = \frac{T_r - T_a}{T_o - T_a} = A\exp\{Bt\} + (1 - A)\exp\{\frac{AB}{A - 1}t\};
+$$  $$
+\footnotesize
+Q = 标准温度; T_r = 所有时间测得的直肠温度; T_a = 环境温度; T_o = 临终直肠温度; A \in \mathbb{C}; B \in \mathbb{C}; t = 死亡时间; \exp 代表指数（exponent）.
+$$
+
+公式里的第二个指数（以常数 $A$ 表示）代表起始部的平台，第一个指数（以常数 $B$ 表示）代表平台以后的曲线。常数 $B$ 依赖于体重。
+
+###### （4）根据尸冷推断死亡时间的公式及方法
+
+- Moritz 公式（1954）
+
+$$
+\begin{aligned}
+TSD &= (37 - T_r) \times 3 / 2.5 \\
+TSD &= (37 - T_r) + 3
+\end{aligned}
+$$
+
+- De Saram 公式（1955）
+
+$$
+\frac{TSD}{t_2 - t_1} = \frac{\log_θ0 - log_θ1}{log_θ1- log_θ2}\quad(所有温度 θ 均以华氏表示)
+$$  $$
+\footnotesize
+θ_0 = 死亡时直肠温度; θ_1 = 死后 t_1 时刻直肠温度; θ_2 = 死后 t_2 时刻直肠温度; t_2 - t_1 = 两次测量直肠温度的差, 一般间隔 1 小时.
+$$
+
+- 中国刑事警察学院编著的《法医学》（1983）
+
+  > 以春秋时节为准，夏季尸体温度下降率较春秋时节慢 1.4 倍，冬季快 0.7 倍；在死后最初 10 小时，尸温每小时下降平均 1 ℃；10 小时后，平均每小时下降 0.5 ℃；肥胖尸体在死亡后最初 10 小时，尸温每小时下降 0.75 ℃，消瘦尸体每小时下降 1 ℃。
+
+- 其他公式
