--- a/法医学/笔记/2 死亡与死后变化.md
+++ b/法医学/笔记/2 死亡与死后变化.md
@@ -931,3 +931,249 @@ $$
   > 以春秋时节为准，夏季尸体温度下降率较春秋时节慢 1.4 倍，冬季快 0.7 倍；在死后最初 10 小时，尸温每小时下降平均 1 ℃；10 小时后，平均每小时下降 0.5 ℃；肥胖尸体在死亡后最初 10 小时，尸温每小时下降 0.75 ℃，消瘦尸体每小时下降 1 ℃。
 
 - 其他公式
+
+##### 2. 综合参数法
+
+> 德国埃森大学法医学研究所 Henssge C. 教授创造
+
+死亡时间推断综合参数法是以尸体直肠温度测量为基础，结合尸斑、尸僵、肌肉的兴奋性等参数，以尸体的体重、所处的环境、衣着及被盖情况等作为矫正值来推断早期死亡时间的。
+
+**特点**：综合了目前能在现场获得的所有早期尸体现象，进行表格化和计算机智能化处理，能在案发现场或室内，徒手或使用便携式计算机快速得出死亡时间，因此特别适用于公安刑侦案例，并已在世界上许多国家得到推广和应用。
+
+> 参见《高级法医学》伍新尧主编，郑州：郑州大学出版社，2002. P31-46
+
+###### （1）直肠温度列线图（nomogram）
+
+![温度-死亡时间相关列线图](assets/markdown-img-paste-20210309162751144.png)
+
+**列线图计算步骤**：第一步将所测的直肠温度与环境温度做一连线；第二步将连线与连线图弯弓内的一条固定细线的交叉点与带圈十字的中点相连，并做一延伸线，然后从环线的尸重部分读出死亡时间。  
+
+![列线图推断死亡时间实例说明](assets/markdown-img-paste-20210309162830427.png)
+
+###### （2）矫正参数表
+
+尸冷受许多因素的影响，如在水中可以加速，或在着衣及盖被情况下延缓，因此要考虑矫正参数，通常以矫正尸体的重量体现矫正结果。
+
+矫正参数或矫正值是从尸体着装条件、空气流动情况、尸体所处状态（水中或干燥）等多个变异参数，经大量实践研究所得出的数据。矫正参数表是将这些矫正值归纳在一起的一种表格，人们可以直接从表格里找到所要的矫正值。
+
+> **例如**：当尸体身着 3 层衣服的情况下，从矫正参数表读出的矫正值为 1.3 ，将原尸重 $70 kg \times 1.3 = 90 kg$，矫正后的尸重为 90 kg，在列线图 90 kg处读数，而不是在 70 kg处读数，死亡时间相应延长了 3.5 h。
+
+![体重矫正因子参数表I](assets/markdown-img-paste-2021030916292798.png)
+
+![体重矫正因子参数表II](assets/markdown-img-paste-20210309163059324.png)
+
+###### （3）早期尸体现象检测表
+
+早期尸体现象检测表是在列线图不足以推断更为早期的死亡时间（5～8 hpm 以内）时，经过对其他尸体早期现象检测，特别是肌肉超生反应检测所得出的结果，综合对早期死亡时间做出推断的评判表。
+
+以 yes（是）和 no（否）二种回答方式代表一定的死后时间范围，以符号 × 作为选定的答案标记。
+
+![早期尸体现象检测表](assets/markdown-img-paste-20210309163222778.png)
+
+#### （二）根据晚期尸体变化推断死亡时间
+
+##### 1. 各种晚期尸体现象
+
+一般情况下，死后 24～48 小时左右，尸体右下腹皮肤出现污绿色斑迹（尸绿）。
+
+死后 3～4 天左右，腐败血液沿着静脉丛形成树枝状污绿色的腐败静脉网。
+
+死后 5～7 天左右，由于细菌不断生长繁殖，产生大量腐败气体充满各种体腔和组织间隙致尸体体积增大、膨胀、眼球突出、舌伸出，皮肤呈污绿色，形成腐败巨人观。
+
+#### （三）根据尸体昆虫生长和演替规律推断死亡时间
+
+**法庭昆虫学**
+- 蝇类昆虫：家蝇、丝光绿蝇、大头金蝇等
+- 虱类 、螨类、蚤类、蚁类、黄蜂等
+
+利用昆虫推断死亡时间的原理：
+- 首先，在自然界中，昆虫种类繁多，分布广泛；
+- 其次，昆虫具有各自的特异生长周期；
+- 最后，由于昆虫的种类不同，其生活习性也略有差异。
+  - 时间差异性
+  - 地域差异性
+  - 演替周期
+
+> **国内近年来的研究**
+>
+> - *巨尾阿丽蝇幼虫发育形态学及其在死者死亡时间推断中的应用*，昆虫学报，2002.02 
+> - *家蝇幼虫发育形态学用于死亡时间推断的基础研究*，中国法医学杂志，2002.01 
+> - *大头金蝇 Chryso mya megacephala 幼虫发育形态学及其在死亡时间推断中的应用探讨*，寄生虫与医学昆虫学报，2002.01 
+> - *丝光绿蝇幼虫发育形态学及其在死亡时间推断中的应用探讨*，中山大学学报(自然科学版)，2000 S2 
+> - *法医昆虫学在死亡时间推断中应用 3 例*，中国法医学杂志， 1999.03 
+> - *北京地区法医昆虫学研究──II. 尸体分解过程中的昆虫种类演替与死亡时间推断*，中国法医学杂志，1997.02 
+
+##### 1. 根据尸体昆虫生长规律推断死亡时间
+
+**蝇蛆的生长规律**
+
+```mermaid
+graph LR
+苍蝇 -->|一个小时| 产卵
+产卵 -->|"10～20小时"| 成蛆
+成蛆 -->|"夏季：0.24～0.30 cm/d，4～5 天成熟"| A[成蛹]
+成蛆 -->|"秋季：0.1 cm/d，2 周成熟"| B[成蛹]
+A -->|经过一周| 破壳为蝇
+A --> 潜入土中
+B --> 潜入土中
+B -->|经过两周| 破壳为蝇
+```
+
+###### （1）秤重推断法
+
+只能适用于幼虫阶段  
+
+###### （2）体长推断法       
+
+研究较多，规律性较强，与蝇类的生长发育历期相结合，比较适合于精确推断死亡时间。但其缺点是鉴别种类难度较大，需要有专家的参与。
+
+> 汤治州用最小二乘法原理对有关数据进行处理，得出一个根据蛆长推断死亡时间的回归方程  
+> $$t ＝ (1.452 - 0.0353T)I - 0.585$$  $$\footnotesize T = 蛆生长期间的平均气温(℃); I = 蛆的长度(mm);$$  $$\footnotesize δ^2 = 0.56(d), r = 0.97.$$
+
+###### （3）活体培养推断法
+
+活体培养推断法是将现场或尸体上的蝇幼虫收集后，在实验室加以培养至成虫，根据蝇的种类及其生活周期特性，可较准确地推断幼虫在尸体上的时间，从而推断死亡时间。
+
+优点在于推断精确性和针对性，恰好弥补秤重和体长推断无法或不易鉴别种类的缺陷：但活体培养需要有专门的条件和知识，需要有专家的参与，因此难以普及推广。
+
+###### （4）几丁质片层计数法
+
+几丁质片层（cuticular chitin layer）是昆虫体表皮的片层状结构，由成分为酰氨基葡萄糖多聚体的几丁质和蛋白质构成，透射电镜下呈横条形或波浪形的几丁质片叠加形态，且具有时间积累性的特点，所以被用于测定昆虫日龄的方法。
+
+根据研究观察，巨尾阿丽蝇一龄幼虫的几丁质片层最大 8 层，二龄最大 11 层。
+
+这种方法目前仅仅是实验研究的结果，且需要有专门的设备，需要有专家的参与，难以普及推广。
+
+##### 2. 根据蛹壳颜色推断死亡时间
+
+**蛹壳颜色的变化规律**：主要与蛹发育过程中醌化蛋白的含量有关，醌化蛋白含量增加，颜色变深。
+
+- 夏季见到蛹壳，即表明尸体已经暴露两周；
+- 春秋季见到蛹壳，即表明尸体已经暴露四周。
+
+$$
+新鲜蛹壳呈红褐色、质地较软\xrightarrow{约10天
+}黑褐色\xrightarrow{15～20天}灰黑色、壳壁变脆\xrightarrow{30天}蛹壳裂成碎片
+$$
+
+##### 3. 根据昆虫在尸体上的演替规律推断死亡时间
+
+根据 Lecler（1969）的研究结果，认为地面上的尸体可受到八个时期的昆虫侵袭，总体上早期以双翅目蝇类为主，中期、晚期以鞘翅目及其它科类昆虫为主，如甲虫、恙虫、蜘蛛等，在死后一年以上已不再有蝇类侵袭发生。
+
+国内周红章等（1997）的观察结果表明，尸食性昆虫侵袭尸体的过程可分为侵入期、分解期和残余期。
+
+一般侵入期 8～25 天，以蝇类为主，分解期 42 天，以甲虫类为主，残余期昆虫明显减少，无蝇类出现。甲虫类最早尸体上第7天出现，其优势种类有尖腐阎甲（Saprinus cuspidatus）、大隐翅虫（Creophilus maxillosus）、双带皮囊（Dermestes coarctatus）、介真阎甲（Merkhister jekeli）以及短角露尾甲（Omosita colon）等。
+
+马玉堃（1996）将室外尸体分为新鲜、肿胀、腐烂、干化、残骸五个变化阶段，总的演替规律是：双翅目蝇类出现于新鲜和腐烂早中期；鞘翅目步甲和阎甲类集中于肿胀至腐烂期。
+
+#### （四）根据胃肠内容物消化程度推断死亡时间
+
+$$
+\begin{aligned}
+& 胃内充满未消化食物 &进餐后不久\\
+& 胃内食物变软，但外形仍完整 &进餐后 1 h 左右\\
+& 胃内容物移向十二指肠，并有相当程度的消化时 &餐后 2～3 h\\
+& 胃内空虚或仅有少量消化物，十二指肠内含有消化物或食物残渣时 &约为进食后 4～5 小时\\
+& 胃和十二指肠内均已空虚 &至少进食已 6 小时以上
+\end{aligned}
+$$  $$
+\footnotesize
+应该注意的是，食物在胃肠内的消化和排空，受许多因素的影响
+$$
+
+#### （五）根据现场情况推断死亡时间
+
+推断死亡时间也可以参照现场的一些情况综合判断。现场的一些遗留物，如报刊杂志、摔坏的手表、印有日期的食品包装袋等等，都可以为死亡时间划定一个界限。
+
+#### （六）根据超生反应推断死亡时间
+
+> 骨骼肌超生反应
+
+##### 1. 根据机械刺激后肌肉兴奋性推断死亡时间
+
+> 1958 年 Dotzauer 研究的结果
+
+$$
+\begin{aligned}
+&第一期：整个肌肉若发生收缩 &死后1.5～2.5小时\\
+&第二期：肌肉出现明显的局部隆起 &死后约4～5小时\\
+&第三期：肌肉局部出现的微弱的收缩隆起，并不明显 &死后8～24小时\\
+\end{aligned}
+$$
+
+##### 2. 根据电刺激后肌肉兴奋性推断死亡时间
+
+- 根据电刺激后肌肉收缩性推断死亡时间
+- 根据刺激肌肉收缩的电流阈值变化推断死亡时间
+
+##### 3. 根据虹膜对药物反应推断死亡时间
+
+药物作用在 5～30 min 后出现，持续时间至少 1 小时。其中瞳孔对乙酰胆碱的反应时间可达 46 hpm。
+
+####（七）根据离子浓度推断死亡时间
+
+国内外许多法医学者检验尸体血液、脑脊液和玻璃体液的化学离子，发现钾、钠、氯等化学离子浓度的死后变化规律性较好，可用于死亡时间的推断。
+
+> **Mason 等（1951）：脑池液(Cisternal fluid)钾浓度与死亡时间的回归方程式**
+>
+> $$[K^+] = 48.56 + 61.45 lgT$$  $$\footnotesize T 为死亡时间, 标准差为\pm 19.4 mmol／L.$$
+
+> **Sturner公式（1963年）：玻璃体液钾浓度**
+>
+> $$[K^+] = 5.476 + 0.14h 或 h = 7.14[K^+] - 39.1$$  $$\footnotesize 95\% 可信限为 \pm  0.95 h$$
+
+#### （八）根据酶的测定推断死亡时间
+
+死后某些组织中酶活性与死后经过时间存在着一定的相关关系。用组织化学和免疫组织化学方法检查死后组织酶活性，有助于推断死亡时间。
+
+1. 肝酶活性的改变
+2. 心肌与骨骼肌酶活性改变
+3. 脾酶活性的改变
+
+#### （九）根据DNA检测推断死亡时间
+
+在同一物种的不同组织的细胞核中，DNA 含量是恒定的。死后一段时间，细胞核 DNA 会发生分解、减少、直至消失。
+
+近十几年来，国内法医工作者采用了 DAPI 荧光法测定兔死亡后短时间搁置过程中内脏器官内 DNA 含量变化研究；应用流式细胞仪（Flow cytometer，FCM）碘化丙啶（Propidium iodide，PI）萤光染色对大鼠死亡后不同时间的心、肝、肾、脾等组织细胞 DNA 含量进行定量分析研究；应用图像分析技术（Image Analysis Technique，IAT）测定死后不同时间大鼠脑、肝、肾、脾、肺及心肌细胞核 DNA 含量的变化与死亡时间之间关系等方面的研究均取得了可喜的可喜的成绩，但用于实际检案对人体死后的时间的推断还有很大的距离，有待进一步的研究。
+
+#### （十）利用植物生长规律推断死亡时间
+
+利用植物推断死亡时间可依据以下三个条件：
+
+- **植物根须的生长**：植物根系生长有一定的规律，它能客观地标记出生长所需的时间。利用植物根须推断死亡时间时，要注意现场环境、土质、植被、朝向等因素。
+- **尸体周围折断的植物**：植物折断、拔起后用来遮盖隐蔽尸体，被拔后的植物就会立即停止生长，停顿于那一时间的生长期中，保留其当时的情况，如发芽程度、叶子大小等等。
+- **尸体下面被压的植物**：被压的植物因无光照作用，颜色会变黄、变白，根据植物叶绿素的变化规律同样可以推断经过时间的依据。
+
+根据植物生长规律来推断死亡时间，对死后经过时间较久者较有重要意义。当然，在推断死亡时间时也应结合其他能提示死亡时间的因素综合分析，才能较准确地推断死亡时间。
+
+#### （十一）白骨化尸体的死亡时间推断
+
+- 形态学观察
+  - 软组织液化及白骨化一般需要经过 2～3 年时间；  
+  - 软骨与韧带腐烂更晚些，约为5～7年后；
+  - 尸骨脱脂需经过 5~10 年；
+  - 10～15 年后尸骨开始风化；
+  - 50 年以后，尸骨疏松，骨密质薄弱，骨质易剥落而损害。
+- 荧光反应
+- 超声波传导性
+- 血清蛋白沉淀反应
+- 骨蛋白与甘油三酯含量测定
+- 骨骼含氮量测定
+- 骨骼的氨基酸测定
+- 联苯胺反应
+- 扫描电子显微镜检查
+- 牙齿变化
+  - 釉质和牙髓随埋葬时间而产生典型的特征变化
+- 毛发变化
+
+---
+
+> **复习思考题**
+>
+> 1. 死后早期死亡时间推断主要有哪些方法？
+> 2. 腐败尸体、白骨化尸体的死亡时间推断主要有哪些方法？
+> 3. 个体死亡后，尸温变化有何规律？其受哪些因素影响？在推断死亡时间上的实用性如何？
+> 4. 通过离子检测推断死亡时间的可行性评价？
+> 5. DNA 检测对推断死亡时间有何意义？其进展如何？
+> 6. 通过昆虫生活、生长规律来推断死亡时间的意义及作用？
+> 7. 虹口冰箱藏尸案，如何推断死亡时间？
