--- a/法医学/笔记/2 死亡与死后变化.md
+++ b/法医学/笔记/2 死亡与死后变化.md
@@ -871,6 +871,10 @@ $$
 
 ![根据尸体现象推断死亡时间](assets/markdown-img-paste-20210309152259829.png)
 
+**根据各种早期尸体现象推断早期死亡时间**
+
+![根据各种早期尸体现象推断早期死亡时间](/assets/截屏2021-03-10%20上午7.12.45.png)
+
 ##### 1. 根据尸温推断死亡时间
 
 ###### （1）尸体温度的测量
