--- a/法医学/笔记/2 死亡与死后变化.md
+++ b/法医学/笔记/2 死亡与死后变化.md
@@ -1181,3 +1181,7 @@ $$
 > 5. DNA 检测对推断死亡时间有何意义？其进展如何？
 > 6. 通过昆虫生活、生长规律来推断死亡时间的意义及作用？
 > 7. 虹口冰箱藏尸案，如何推断死亡时间？
+
+> **参考文献**
+>
+> http://fdjpkc.fudan.edu.cn/d200905/2010/0322/c9438a17029/page.htm
