--- a/法医学/笔记/2 死亡与死后变化.md
+++ b/法医学/笔记/2 死亡与死后变化.md
@@ -1155,7 +1155,7 @@ $$
 - 形态学观察
   - 软组织液化及白骨化一般需要经过 2～3 年时间；  
   - 软骨与韧带腐烂更晚些，约为5～7年后；
-  - 尸骨脱脂需经过 5~10 年；
+  - 尸骨脱脂需经过 5～10 年；
   - 10～15 年后尸骨开始风化；
   - 50 年以后，尸骨疏松，骨密质薄弱，骨质易剥落而损害。
 - 荧光反应
