--- a/中医学/笔记.md
+++ b/中医学/笔记.md
@@ -20,10 +20,10 @@
 ### 五行的特性
 
 - **木曰曲直**：曲，屈也；直，伸也。曲直即舒展条达特性。宇宙或生命凡具有曲直特性的事物或现象，都归属木类。
-- **火性炎上**：炎，热也；上，向上。炎上即温热升腾特性。宇宙或生命凡具有炎上特性的事物或现象都归属火类。
-- **土性稼穑**：春种日稼，秋收曰穑。稼穑即播种收获特性。宇宙或生命凡具有稼穑特性的事物或现象都归属土类。
-- **金曰从革**：从，顺从；革，革除。从革即变革肃杀特性。宇宙或生命凡具有从革特性的事物或现象都归属金类。
-- **水曰润下**：润，寒湿；下，向下。润下即寒凉向下特性。宇宙或生命凡具有润下的事物或现象都归属水类。
+- **火性炎上**：炎，热也；上，向上。炎上即温热升腾特性。宇宙或生命凡具有炎上特性的事物或现象，都归属火类。
+- **土性稼穑**：春种日稼，秋收曰穑。稼穑即播种收获特性。宇宙或生命凡具有稼穑特性的事物或现象，都归属土类。
+- **金曰从革**：从，顺从；革，革除。从革即变革肃杀特性。宇宙或生命凡具有从革特性的事物或现象，都归属金类。
+- **水曰润下**：润，寒湿；下，向下。润下即寒凉向下特性。宇宙或生命凡具有润下特性的事物或现象，都归属水类。
 
 ### 五行与人体对应关系
 
@@ -152,9 +152,27 @@
 
 ### 经络的功效
 
-
+- **生理作用**
+  - 联系人体脏腑与肢体
+  - 运行气血，濡养机体
+  - 护卫机体，抵御外邪
+- **病理作用**
+  - 反应证候
+  - 传注病邪
+- **诊断作用**
+  - 「有诸内必行于诸外」：病邪既可借经络入侵脏腑，脏腑有病也可根据经络在体表的循行，皮部的分野，通过审视、按压等方法，探索其阳性体征和反应点，发现其病理变化，以作为临床诊断的一个重要参考。
+- **治疗作用**
+  - 「经脉所过，主治所及」：当经络脏腑功能失常时，运用针和灸对腧穴的刺激，通过经络的传导，起到双向良性的调整作用，使之恢复正常的生理状态。
 
 ### 十二经脉的总分布规律、循行走向与交接规律
+
+- **总分布规律**：十二经脉在体表为左右对称地分布于四肢、头面和躯干，并纵贯全身。其分布规律：「内为阴，外为阳；腹为阴，背为阳；头为诸阳之会。」
+- **循行走向**
+  - 手三阴经从胸走手
+  - 手三阳经从手走头
+  - 足三阳经从头走足
+  - 足三阴经从足走腹（胸）。
+- 交接规律
 
 ## 法
 
@@ -343,19 +361,79 @@
 
 #### 脾气虚
 
+- **证候定义**：符合脾气虚证辨证标准的证候称脾气虚证。
+- **临床意义**：①脾主消化功能减退；②脾主肌肉功能减退；③首选健脾益气方药。
+- **辨证要点**：①神疲乏力；②少气懒言，③面色萎黄；④食欲不振；⑤脘腹胀满；⑥大便溏薄；⑦消瘦；⑧舌淡红；⑨苔薄白；⑩脉虚细。
+- **常见疾病**：①慢性胃炎；②消化性溃疡；③晚期肿瘤；④重症肌无力。
+- **临床决策**：健脾益气。治疗推荐：参苓白术散；香砂六君丸。
+- **常用药物**：人参，黄芪，白术，茯苓，山药，扁豆，甘草，莲子，砂仁，薏苡仁，木香。2.脾阳虚证
+
 #### 脾阳虚
+
+- **证候定义**：符合脾阳虚证辨证标准的证候称脾阳虚证。
+- **临床意义**：①脾主消化功能减退；②脾主肌肉功能减退；③首选健脾温阳方药。
+- **辨证要点**：①有脾气虚证症状或体征；②畏寒；③四肢不温；④腹痛；⑤腹水；⑥舌淡；⑦苔白；③脉迟。
+- **常见疾病**：①慢性胃炎；②消化性溃疡；③晚期肿瘤；④肝硬化腹水。
+- **临床决策**：温补脾阳。
+- **治疗推荐**：附子理中汤；温脾汤。
+- **常用药物**：附子，人参，吴茱萸，干姜，肉桂，白术，茯苓，砂仁，木香，甘草。
 
 #### 肝气郁结
 
+- **证候定义**：符合肝气郁结辨证标准的证候称肝气郁结证。
+- **临床意义**：①肝主疏泄功能障碍；②肝主谋虑功能障碍；③肝主藏血功能障碍；④首选疏肝解郁方药。
+- **辨证要点**：①情绪低落；②胸胁满闷；③咽喉如梗；④食欲不振；⑤乳房胀痛；⑥月经不调；⑦焦虑烦躁；⑧苔白；⑨舌红；⑩脉弦。
+- **常见疾病**：①抑郁障碍；②月经不调；③非酒精性脂肪肝。
+- **临床决策**：疏肝理气。
+- **治疗推荐**：柴胡疏肝饮；逍遥散。
+- **常用药物**：柴胡，青皮，香附，川芎，郁金，白芍，枳壳，当归，川楝子，茯苓，白术，薄荷。
+
 #### 肾阳虚
+
+- **证候定义**：符合肾阳虚证辨证标准的证候称肾阳虚证。
+- **临床意义**：①肾主藏精功能减退：②肾主命门功能减退；③首选温补肾阳方药。
+- **辫证要点**：①畏寒：②四肢不温：③头晕；①耳鸣；⑤腰酸；⑥性欲减退；⑦不孕；⑧舌淡；⑨脉沉虚。
+- **常见疾病**：①肾上腺皮质功能减退；②慢性肾炎；③甲状腺功能减退症；④黄体功能减退。
+- **治疗推荐**：右归饮：鹿茸丸（《袖珍方》卷二引《淡寮方》）。
+- **临床决策**：温补肾阳。
+- **常用药物**：鹿茸，熟地，附子，肉桂，淫羊藿，菟丝子，杜仲，肉苁蓉，沉香，当归，茴香，破故纸，山药，山茱萸，枸杞，杜仲。
 
 #### 肾阴虚
 
+- **证候定义**：符合肾阴虚证辨证标准的证候称肾阴虚证。
+- **临床意义**：①肾主藏精功能减退；②肾作强功能障碍；③首选滋补肾阴方药。
+- **辨证要点**：①头晕；②潮热：③耳鸣；@腰酸；⑤不孕不育；⑥口干；⑦舌红；③苔少；⑨脉沉虚。
+- **常见疾病**：①肾上腺皮质功能亢进；②糖尿病；③高血压病；④甲状腺功能亢进症；⑤帕金森病。
+- **临床决策**：滋补肾阴。治疗推荐：左归饮；六味地黄丸。
+- **常用药物**：熟地，山药，枸杞，萸肉，牛膝，菟丝子，鹿胶，龟胶。
+
 #### 肾气不固
+
+- **证候定义**：符合肾气不固证辨证标准的证候称肾气不固证。
+- **临床意义**：①肾主水功能减退；②肾主固摄功能减退；③与泌尿外科疾病相关；④首选补肾固摄方药。
+- **辨证要点**：①小便频数；②余沥不尽；③遗尿；④小便失禁；⑤滑精；⑥白带清稀；⑦舌淡：⑧苔白；⑨脉沉虚。
+- **常见疾病**：①前列腺肥大；②前列腺肿瘤；③糖尿病；④盆腔炎；⑤膀胱炎。临床决策：补肾固摄。
+- **治疗推荐**：①金匮肾气丸；②缩泉丸；③金锁固精丸。
+- **常用药物**：附子，肉桂，熟地，山药，萸肉，仙茅，淫羊藿，金樱子，芡实，诃子。
 
 #### 肾虚水泛
 
+- **证候定义**：符合肾虚水泛辨证标准的证候称肾虚水泛证。
+- **临床意义**：①肾主水功能减退；②肾阳不足；③与肾脏内科疾病相关；④首选补肾利水方药。
+- **辨证要点**：①水肿；②腹胀；③尿少；④畏寒；⑤四肢不温；⑥面色黧黑；⑦舌质淡；⑧舌形胖嫩；⑨舌苔厚白；⑩脉沉细。
+- **常见疾病**：①慢性肾炎；②慢性肾功能不全；③肾病综合征。
+- **临床决策**：补肾利水。治疗推荐：真武汤；消水圣愈汤；大黄附子汤。
+- **常用药物**：附子，桂枝，大黄，细辛，干姜，椒目，人参。
+
 #### 肾不纳气
+
+- **证候定义**：符合肾不纳气证辨证标准的证候称肾不纳气证。
+- **临床意义**：①肾主纳气功能减退；②肾阳不足；③与呼吸内科疾病相关；④首选补肾纳气方药。
+- **辨证要点**：①哮喘；②咳嗽；③胸闷；④短气；⑤畏寒；⑥四肢不温；⑦面色紫暗；⑧舌质淡；⑨舌苔白；⑩脉沉细。
+- **常见疾病**：①慢性支气管；②支气管哮喘；③慢性心功能不全。
+- **临床决策**：补肾纳气。
+- **治疗推荐**：参蛤散；黑锡丹。
+- **常用药物**：人参，蛤蚧，沉香，附子，熟地，当归。
 
 ### 标本之辨，缓急其要
 
@@ -403,21 +481,59 @@
 
 #### 桂枝汤
 
-
+- **组成**：桂枝、芍药、甘草、生姜、大枣。
+- **功用**：调和营卫。
+- **主治**：外感表寒证。
+- **辨证要点**：①恶风；②发热；③头痛；④汗出；⑤鼻鸣；⑥干呕；⑦舌苔薄白；③脉浮缓。
 
 #### 银翘散
 
+- **组成**：银花、连翘、桔梗、薄荷、竹叶、甘草、荆芥、牛蒡子、豆豉、芦根。
+- **功用**：辛凉透表。
+- **主治**：温病风热表证。
+- **辨证要点**：①发热；②恶寒；③头痛；④口渴；⑤咳嗽；⑥咽痛；⑦无汗或微汗；⑧舌苔薄黄；⑨舌质红赤；⑩脉浮数。
+
 #### 藿香正气散
+
+- **组成**：藿香、紫苏、白术、白芷、茯苓、大腹皮、厚朴、半夏、桔梗、甘草。
+- **功用**：化湿解表。
+- **主治**：外感风寒湿证。
+- **辨证要点**：①恶寒；②发热；③头痛；④胸闷；⑤腹痛；⑥恶心；⑦腹泻；⑧苔腻；⑨脉濡。
 
 #### 二陈汤
 
+- **组成**：半夏、陈皮、茯苓、甘草。
+- **功用**：燥湿化痰。
+- **主治**：湿痰证。
+- **辨证要点**：①咳嗽痰多；②色白易咯；③恶心呕吐；④胸膈痞闷；⑤肢体困重；⑥头眩心悸；⑦舌苔白滑或腻；⑧脉滑。
+
 #### 四君子汤
+
+- **组成**：人参、炙甘草、茯苓、白术。
+- **功用**：补气健脾。
+- **主治**：脾胃气虚证。
+- **辨证要点**：①食少；②便溏；③语言低微；④倦怠无力；⑤舌淡苔白；⑥脉濡细。
 
 #### 四物汤
 
+- **组成**：熟地、当归、白芍、川芎。
+- **功用**：补血调经。
+- **主治**：营血虚滞证。
+- **辨证要点**：①月经不调；②痛经；③月经量少；④崩漏；⑤头昏；⑥心悸；⑦舌淡；⑧脉细。
+
 #### 六味地黄丸
 
+- **组成**：熟地黄、山萸肉、牡丹皮、山药、茯苓、泽泻。
+- **功用**：滋阴补肾。
+- **主治**：肾阴亏虚证。
+- **辨证要点**：①腰酸；②膝软；③头晕；④目眩；⑤盗汗；⑥遗精；⑦骨蒸；⑧潮热；⑨手心热；⑩足心热；⑪舌红少苔；⑫脉沉细数。
+
 #### 茵陈蒿汤
+
+- **组成**：茵陈蒿、栀子、大黄。
+- **功用**：清热利湿。
+- **主治**：湿热黄疸。
+- **辨证要点**：①巩膜皮肤黄染；②小便黄赤；③大便不畅；④胸闷；⑤口渴；⑥苔腻；⑦脉滑数。
 
 ## 临床
 
@@ -433,13 +549,28 @@
 
 ### 肿瘤的中医药治疗原则
 
+- 扶正与祛邪
+- 虚实补泻
+- 保「后天之本」与固「先天之本」
+- 异病同治与同病异治
+- 辨证与辩病相结合
+
 ### 妇女的生理及病理特点
+
+- **妇女的病理特点**
+  - **气血失调**：气血亏虚、气滞血瘀、气虚血瘀等
+  - **脏腑功能失调**
+    - **肝**：肝气郁结、肝郁化火、肝阴不足、肝血不足
+    - **肾**：肾气不足、肾阳虚衰、肾阴不足
+	- **脾**：脾气虚弱
+  - **经络**：冲任二脉损伤为最
+
 
 ### 小儿的生理及病理特点、小儿生长发育
 
-- 小儿的生理特点
+- **小儿的生理特点**
   - 脏腑娇嫩、形气未充
   - 生机勃勃，发育迅速（纯阳）
-- 小儿病理特点
+- **小儿病理特点**
   - 发病容易，传变迅速
   - 脏器清灵，易趋康复 
