--- a/中医学/笔记.md
+++ b/中医学/笔记.md
@@ -557,6 +557,12 @@
 
 ### 妇女的生理及病理特点
 
+- **妇女的生理特点**
+  - 月经生理
+  - 带下生理
+  - 妊娠生理
+  - 产褥生理
+	- 哺乳生理
 - **妇女的病理特点**
   - **气血失调**：气血亏虚、气滞血瘀、气虚血瘀等
   - **脏腑功能失调**
@@ -569,8 +575,8 @@
 ### 小儿的生理及病理特点、小儿生长发育
 
 - **小儿的生理特点**
-  - 脏腑娇嫩、形气未充
-  - 生机勃勃，发育迅速（纯阳）
+  - **脏腑娇嫩、形气未充**（稚阴稚阳）：脾常不足、肺脏娇嫩、肾脏常虚
+  - **生机蓬勃，发育迅速**（纯阳）
 - **小儿病理特点**
   - 发病容易，传变迅速
   - 脏器清灵，易趋康复 
